<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="148dp"
        android:layout_height="98dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/sunnyframebg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kurale"
                android:padding="6dp"
                android:text="East"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kurale"
                android:padding="6dp"
                android:text="10.00"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/e_direction" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="148dp"
        android:layout_height="98dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/sunnyframebg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="49dp"
                android:fontFamily="@font/kurale"
                android:padding="4dp"
                android:text="Sunrise"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:fontFamily="@font/kurale"
                android:padding="5dp"
                android:text="00:00"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="49dp"
                android:fontFamily="@font/kurale"
                android:text="Sunset"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:fontFamily="@font/kurale"
                android:text="00:00"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="148dp"
        android:layout_height="98dp"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/degree"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degree"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/sunnyframebg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="lat"
            android:fontFamily="@font/kurale"
            android:textColor="@color/black"
            android:textSize="26dp"
            android:padding="6dp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kurale"
            android:text="10.00"
            android:textColor="@color/black"
            android:padding="6dp"
            android:textAlignment="center"
            android:textSize="26dp"
            android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchbar"
        android:layout_width="295dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="4dp"
        android:background="@color/bg"
        android:backgroundTint="@color/white"
        android:hint="Search city"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="236dp"
        android:background="@color/transperent"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toEndOf="@+id/searchbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/location"
        android:layout_width="200dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/searchbar"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/searchbar"
        app:layout_constraintTop_toBottomOf="@+id/searchbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="241dp"
        android:layout_height="149dp"
        android:src="@drawable/cloudj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/degree"
        android:layout_width="109dp"
        android:layout_height="57dp"
        android:fontFamily="@font/lilita_one"
        android:text="00:00°C"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="329dp"
        android:layout_height="158dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/sunnyframebg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_editor_absoluteY="17dp">

        <LinearLayout
            android:layout_width="185dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kurale"
                android:padding="6dp"
                android:text="@string/Humidity"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kurale"
                android:padding="6dp"
                android:text="@string/pressure"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kurale"
                android:padding="7dp"
                android:text="@string/rain"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:fontFamily="@font/kurale"
                android:padding="6dp"
                android:text="65%"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/kurale"
                android:padding="10dp"
                android:text="1006mbar"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/kurale"
                android:padding="14dp"

                android:text="65%"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="148dp"
        android:layout_height="98dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/sunnyframebg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kurale"
                android:textColor="@color/black"
                android:padding="6dp"
                android:text="long"
                android:textAlignment="center"
                android:textSize="26dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kurale"
                android:textColor="@color/black"
                android:padding="6dp"
                android:text="10.00"
                android:textAlignment="center"
                android:textSize="26dp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
